# Warmer

./: .dir-locals.el  .gitignore  Benchmarks-b12d07c_include.cmake  CMakeLists.txt  CTestTestfile.cmake  LICENSE  README.md  Tests-b12d07c_include.cmake  Warmer.jucer  clip  compile_commands.json  dependencies.txt  extra.txt  juce_vst3_helper  log.txt  valLog  valgrind-out.txt
Builds/LinuxMakefile/: Makefile  soup
JUCE/: JUCEConfig.cmake  JUCEConfigVersion.cmake  JUCEExportConfig.cmake  juce_lv2_helper  juce_vst3_helper
JUCE/modules/juce_audio_utils/gui/: juce_AudioVisualiserComponent.cpp  juce_AudioVisualiserComponent.h
JUCE/tools/: JUCEConfig.cmake  JUCEExportConfig.cmake  JUCEToolsExport.cmake
JuceLibraryCode/: JuceHeader.h
JuceLibraryCode/modules/juce_audio_utils/gui/: juce_AudioVisualiserComponent.cpp
JuceLibraryCode/modules/juce_core/: juce_core.h
JuceLibraryCode/modules/juce_core/system/: juce_PlatformDefs.h
JuceLibraryCode/modules/juce_graphics/contexts/: juce_GraphicsContext.cpp
JuceLibraryCode/modules/juce_gui_basics/lookandfeel/: juce_LookAndFeel_V3.cpp
JuceLibraryCode/modules/juce_gui_basics/windows/: juce_DocumentWindow.cpp
Source/: ColourPalette.h  EditPage.cpp  EditPage.h  GraphPage.cpp  GraphPage.h  Instrument.cpp  Instrument.h  MIDIPianoComponent.cpp  MIDIPianoComponent.h  MIDISettings.cpp  MIDISettings.h  Main.cpp  MainComponent.cpp  MainComponent.h  MasterComponent.cpp  MasterComponent.h  MenuComponent.cpp  MenuComponent.h  ModeSwitch.h  MyDataStructures.cpp  MyDataStructures.h  MyLookAndFeel.cpp  MyLookAndFeel.h  Piano.cpp  Piano.h  PianoSideBar.h  PlayPage.cpp  PlayPage.h  PresetSwitch.h  Profiler.h  VolumeLevel.cpp  VolumeLevel.h  WaveShapeDisp.cpp  WaveShapeDisp.h  Wheels.cpp  Wheels.h  XML_Handling.h
Source/Elements/: Element.cpp  Element.h
Source/GraphNodes/: Collection.h  Connection.cpp  Connection.h  DemoNode.cpp  DemoNode.h  GraphNode.cpp  GraphNode.h  GraphNodeMaster.h  InputMasterGraphNode.cpp  InputMasterGraphNode.h  InputOutputTypesForSocket.h  InputOutputTypesForSokets.h  MyParameterCtrls.h  Node.cpp  Node.h  NodeIOType.h  OutputMasterGraphNode.cpp  OutputMasterGraphNode.h  ParameterCtrl.h  Slider.h  Socket.cpp  Socket.h
Source/GraphNodes/Effects/: Analog-ify.h  Chorus.h  Compressor.h  Delay.h  Detune.h  Distortion.h  Flanger.h  Granulate.h  Reverb.h  RingModulate.h
Source/GraphNodes/Etc/: Glide.h  PitchShift.h
Source/GraphNodes/Filters/: ButterWorth.h  Chebyshev.h  Digital.h  ladder.h
Source/GraphNodes/General/: ADSR.h  AddLag.h  Convolution.h  Envelope.h  Feedback.h  LFO.h  Utility.h
Source/GraphNodes/MIDI/: MIDI_Arp.h  MIDI_Chord.h  MIDI_EventFilter.h  MIDI_NoteFilter.h  MIDI_NoteToFreq.h  MIDI_Polyphony.h  MIDI_Quantize.h  MIDI_Transpose.h
Source/GraphNodes/Math/: AddAndMul.h  AddOrSubtractSignal.h  ClampSignal.h  FM.h  MathClamp.h  MixSignal.h  Mixer.h  ReRamp.h  addSignal.h
Source/GraphNodes/Oscillators/: CustomWaveShapeOscillator.h  Noise.h  Oscillator.h  RandomOscillator.h  SampleSound.h  Sampler.h
Source/MainWindow/: main_frame.h  main_window.cpp
Warmer_artefacts/JuceLibraryCode/: Defs.txt  Info.txt
Warmer_artefacts/Standalone/: multi.xml
Warmer_artefacts/VST3/Warmer.vst3/Contents/Resources/: moduleinfo.json
cmake/: CHANGELOG.md  SharedCodeDefaults.cmake  Tests.cmake
juce_binarydata_Assets/JuceLibraryCode/: input_file_list
source/: ColourPalette.h  Instrument.cpp  Instrument.h  MIDIPianoComponent.h  Main.cpp  MainComponent.cpp  MainComponent.h  MasterComponent.cpp  MasterComponent.h  MenuComponent.cpp  MenuComponent.h  ModeSwitch.h  Modes.h  MyDataStructures.cpp  MyDataStructures.h  MyLookAndFeel.h  Piano.cpp  Piano.h  PianoSideBar.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetSwitch.h  Profiler.h  VolumeLevel.h  WaveShapeDisp.cpp  WaveShapeDisp.h  Wheels.h  XML_Handling.h  cool pallets.txt
source/GraphNodes/: Connection.h  GraphNode.h  InputOutputTypesForSocket.cpp  InputOutputTypesForSokets.h  MyParameterCtrls.h  OutputMasterGraphNode.h
source/GraphNodes/Effects/: Equalizer.h  Phaser.h  Unison.h
source/GraphNodes/Etc/: BPM-Tempo.h  Constant.h
source/GraphNodes/Filters/: Digital.h  ladder.h
source/GraphNodes/General/: Convolution.h  Envelope.h  SoftClip.h
source/GraphNodes/MIDI/: MIDI_FreqToNote.h  MIDI_Generate.h  MIDI_Polyphony.h
source/GraphNodes/Math/: Absolute.h  AddAndMul.h  AddOrSubtractSignal.h  MathClamp.h  ReRamp.h
source/GraphNodes/Oscillators/: Noise.h  WavetableOscillator.h
tests/: PluginBasics.cpp
tests/helpers/: test_helpers.h
